fix: ajustes do soldProposal
