# docs/swagger.json
@@ -175,6 +175,69 @@
 				"type": "object",
 				"additionalProperties": true
 			},
+			"UnusualSoldProposal": {
+				"properties": {
+					"customerId": {
+						"type": "string"
+					},
+					"order": {
+						"type": "string"
+					},
+					"tenant": {
+						"type": "string"
+					},
+					"receivedPaymentNotification": {
+						"additionalProperties": true,
+						"type": "object"
+					},
+					"partnerResponse": {
+						"additionalProperties": true,
+						"type": "object"
+					},
+					"success": {
+						"type": "boolean"
+					},
+					"createdAt": {
+						"type": "string"
+					},
+					"status": {
+						"type": "string"
+					},
+					"apiVersion": {
+						"type": "string"
+					},
+					"NSU": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"customerId",
+					"order",
+					"tenant",
+					"receivedPaymentNotification",
+					"partnerResponse",
+					"success",
+					"createdAt",
+					"status",
+					"apiVersion",
+					"NSU"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"UnusualNotification": {
+				"properties": {
+					"signedInfo": {
+						"type": "string",
+						"description": "Pagamento assinado"
+					}
+				},
+				"required": [
+					"signedInfo"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
 			"RenewPortableProposalNotification": {
 				"properties": {
 					"signedPayment": {
@@ -2734,6 +2797,40 @@
 						}
 					}
 				]
+			}
+		},
+		"/v1/unusual/insert_dynamo": {
+			"post": {
+				"operationId": "InsertDynamo",
+				"responses": {
+					"200": {
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UnusualSoldProposal"
+								}
+							}
+						},
+						"description": "Retrieved"
+					},
+					"404": {
+						"content": {
+							"application/json": {}
+						},
+						"description": "NotFound"
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UnusualNotification"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/v1/renew-portable/portable-info/{customerId}": {
